--- a/course.html
+++ b/course.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+    <iframe width="420" height="315" src="https://www.youtube.com/watch?v=hEgO047GxaQ">
+    </iframe>
 
 </body>
 
