--- a/explore.html
+++ b/explore.html
@@ -34,7 +34,9 @@
     <section class="course-list">
         <div class="course-1">
             <div class="thumbnail">
-                <img src="https://img.youtube.com/vi/QXeEoD0pB3E/hqdefault.jpg" alt="">
+                <a href="course.html">
+                    <img src="https://img.youtube.com/vi/QXeEoD0pB3E/hqdefault.jpg" alt="">
+                </a>
             </div>
             <div class="description">
                 <p>Python programming</p>
@@ -76,42 +78,58 @@
         </div>
         <div class="course-1">
             <div class="thumbnail">
-                <img src="https://img.youtube.com/vi/yEHCfRWz-EI/hqdefault.jpg" alt="">
+                <img src="https://img.youtube.com/vi/1A_CAkYt3GY/hqdefault.jpg" alt="">
             </div>
             <div class="description">
-                <p>python programming</p>
+                <p>Philosophy Crash Course</p>
             </div>
         </div>
         <div class="course-1">
             <div class="thumbnail">
-                <img src="https://img.youtube.com/vi/yEHCfRWz-EI/hqdefault.jpg" alt="">
+                <img src="https://img.youtube.com/vi/VZDTs4lpqUM/hqdefault.jpg" alt="">
             </div>
             <div class="description">
-                <p>python programming</p>
+                <p>Free Beginner Piano Tutorial</p>
             </div>
         </div>
         <div class="course-1">
             <div class="thumbnail">
-                <img src="https://img.youtube.com/vi/yEHCfRWz-EI/hqdefault.jpg" alt="">
+                <img src="https://img.youtube.com/vi/rozYNIZ9ptc/hqdefault.jpg" alt="">
             </div>
             <div class="description">
-                <p>python programming</p>
+                <p>JEE Exam Preparation</p>
             </div>
         </div>
         <div class="course-1">
             <div class="thumbnail">
-                <img src="https://img.youtube.com/vi/yEHCfRWz-EI/hqdefault.jpg" alt="">
+                <img src="https://img.youtube.com/vi/JFF2vJaN0Cw/hqdefault.jpg" alt="">
             </div>
             <div class="description">
-                <p>python programming</p>
+                <p>Computer Networks (Complete Playlist)</p>
             </div>
         </div>
         <div class="course-1">
             <div class="thumbnail">
-                <img src="https://img.youtube.com/vi/yEHCfRWz-EI/hqdefault.jpg" alt="">
+                <img src="https://img.youtube.com/vi/bPrmA1SEN2k/hqdefault.jpg" alt="">
             </div>
             <div class="description">
-                <p>python programming</p>
+                <p>Complete Machine Learning playlist</p>
+            </div>
+        </div>
+        <div class="course-1">
+            <div class="thumbnail">
+                <img src="https://img.youtube.com/vi/JL_grPUnXzY/hqdefault.jpg" alt="">
+            </div>
+            <div class="description">
+                <p>Data Science Full Course For Beginners</p>
+            </div>
+        </div>
+        <div class="course-1">
+            <div class="thumbnail">
+                <img src="https://img.youtube.com/vi/RIvJvHBguHg/hqdefault.jpg" alt="">
+            </div>
+            <div class="description">
+                <p>Classical Physics</p>
             </div>
         </div>
     </section>
