--- a/explore.html
+++ b/explore.html
@@ -9,10 +9,28 @@
 
     <link href="css/explore.css" rel="stylesheet" />
 
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+
 
 </head>
 
 <body>
+
+    <body>
+        <!-- Insert this script at the bottom of the HTML, but before you use any Firebase services -->
+        <!-- <script type="module">
+            import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.9.1/firebase-app.js'
+
+            // If you enabled Analytics in your project, add the Firebase SDK for Google Analytics
+
+
+            // Add Firebase products that you want to use
+            //import { auth } from 'https://www.gstatic.com/firebasejs/9.9.1/firebase-auth.js'
+            import { firestore } from 'https://www.gstatic.com/firebasejs/9.9.1/firebase-firestore.js'
+        </script> -->
+    </body>
+
     <div class="nav-bar">
         <a class="navbar-brand" href="index.html">
             <span>
@@ -142,6 +160,8 @@
             var curl = document.getElementById("course-url").value;
 
             console.log(name);
+
+            db.collection('jjjjj').add({ name })
         }
     </script>
 
@@ -158,27 +178,35 @@
         </div>
     </div>
     <script type="module">
-        // Import the functions you need from the SDKs you need
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.9.0/firebase-app.js";
-        import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.9.0/firebase-analytics.js";
-        // TODO: Add SDKs for Firebase products that you want to use
-        // https://firebase.google.com/docs/web/setup#available-libraries
 
-        // Your web app's Firebase configuration
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-        const firebaseConfig = {
-            apiKey: "AIzaSyCT-jG3sIps1e0v_LNUXX8oEaiui1_OV1E",
-            authDomain: "coursetube-ac134.firebaseapp.com",
-            projectId: "coursetube-ac134",
-            storageBucket: "coursetube-ac134.appspot.com",
-            messagingSenderId: "1037924647195",
-            appId: "1:1037924647195:web:b27b1e1f0c92894451d3be",
-            measurementId: "G-V0HW8SXB74"
-        };
+        // import firebase from "firebase/app";
+        // import "firebase/firestore";
 
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const analytics = getAnalytics(app);
+        // TODO: Replace the following with your app's Firebase project configuration
+        // See: https://firebase.google.com/docs/web/learn-more#config-object
+        try {
+            const firebaseConfig = {
+                apiKey: "AIzaSyCT-jG3sIps1e0v_LNUXX8oEaiui1_OV1E",
+                authDomain: "coursetube-ac134.firebaseapp.com",
+                projectId: "coursetube-ac134",
+                storageBucket: "coursetube-ac134.appspot.com",
+                messagingSenderId: "1037924647195",
+                appId: "1:1037924647195:web:b27b1e1f0c92894451d3be",
+                measurementId: "G-V0HW8SXB74"
+            };
+
+            // Initialize Firebase
+            firebase.initializeApp(firebaseConfig);
+
+
+            // Initialize Cloud Firestore and get a reference to the service
+            const db = firebase.firestore();
+            // Import the functions you need from the SDKs you need
+        } catch (error) {
+            console.log(error);
+        }
+
+
     </script>
     <script src="js/explore.js"></script>
 
