--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
   <!-- footer section -->
   <section class="container-fluid footer_section">
     <p>
-      Copyright &copy; 2022 All Rights Reserved By
+      Copyright &copy; <a href="admin.html">2022</a> All Rights Reserved By
       <a href="https://html.design/">Coursetube</a>
     </p>
   </section>
