admin css seperated

--- a/admin.html
+++ b/admin.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Courses</title>
 
-    <link href="css/explore.css" rel="stylesheet" />
+    <link href="css/admin.css" rel="stylesheet" />
     <!-- fonts style -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700|Raleway:400,600&display=swap" rel="stylesheet">
     <!-- font wesome stylesheet -->
@@ -121,7 +121,8 @@
          <div class="description">
            <p>${item.name}</p>
            <p>${item.channelName}</p>
-           <button id="approve-button">APPROVE</button> 
+           <button id="approve-button" onclick="">APPROVED</button>
+            
          </div>
        </div>`;
 
