--- a/index.html
+++ b/index.html
@@ -135,74 +135,7 @@
     </section>
 
 
-    <!-- end about section -->
 
-    <!-- admission section -->
-    <section class="admission_section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="admission_detail-box">
-              <h3>
-                Admission open
-              </h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              </p>
-              <div class="">
-                <a href="" class="call_to-btn btn_white-border">
-                  Read More
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="admission_img-container">
-              <img src="images/admission.png" alt="">
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-
-
-    <!-- end admission section -->
-
-    <!-- why section -->
-    <section class="why_section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="why_img-container">
-              <img src="images/why.png" alt="">
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="why_detail-box">
-              <h3>
-                Why learn on Coursetube
-              </h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              </p>
-              <div class="">
-                <a href="" class="call_to-btn btn_white-border">
-                  Read More
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-
-    <!-- end why section -->
 
     <!-- determine section -->
     <section class="determine_section">
@@ -333,50 +266,6 @@
 
 
   <!-- contact section -->
-
-  <section class="contact_section ">
-
-    <div class="container">
-
-      <div class="row">
-        <div class="col-md-6">
-          <div class="d-flex justify-content-center d-md-block">
-            <h2>
-              Contact Us
-            </h2>
-          </div>
-          <form action="">
-            <div class="contact_form-container">
-              <div>
-                <div>
-                  <input type="text" placeholder="Name">
-                </div>
-                <div>
-                  <input type="email" placeholder="Email">
-                </div>
-                <div>
-                  <input type="text" placeholder="Phone Number">
-                </div>
-                <div class="mt-5">
-                  <input type="text" placeholder="Message">
-                </div>
-                <div class="mt-5">
-                  <button type="submit">
-                    send
-                  </button>
-                </div>
-              </div>
-            </div>
-          </form>
-        </div>
-        <div class="col-md-6">
-          <div class="contact_img-box">
-            <img src="images/students.jpg" alt="">
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
   <!-- end contact section -->
   <section class="info_section layout_padding-top">
     <div class="info_logo-box">
@@ -480,3 +369,119 @@
 </body>
 
 </html>
+
+<!-- contact section -->
+
+<!-- <section class="contact_section ">
+
+  <div class="container">
+
+    <div class="row">
+      <div class="col-md-6">
+        <div class="d-flex justify-content-center d-md-block">
+          <h2>
+            Contact Us
+          </h2>
+        </div>
+        <form action="">
+          <div class="contact_form-container">
+            <div>
+              <div>
+                <input type="text" placeholder="Name">
+              </div>
+              <div>
+                <input type="email" placeholder="Email">
+              </div>
+              <div>
+                <input type="text" placeholder="Phone Number">
+              </div>
+              <div class="mt-5">
+                <input type="text" placeholder="Message">
+              </div>
+              <div class="mt-5">
+                <button type="submit">
+                  send
+                </button>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="col-md-6">
+        <div class="contact_img-box">
+          <img src="images/students.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+end contact section -->
+
+<!-- end about section -->
+
+<!-- admission section
+    <section class="admission_section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="admission_detail-box">
+              <h3>
+                Admission open
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+              </p>
+              <div class="">
+                <a href="" class="call_to-btn btn_white-border">
+                  Read More
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="admission_img-container">
+              <img src="images/admission.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+ -->
+
+
+<!-- end admission section -->
+
+<!-- why section
+    <section class="why_section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="why_img-container">
+              <img src="images/why.png" alt="">
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="why_detail-box">
+              <h3>
+                Why learn on Coursetube
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+              </p>
+              <div class="">
+                <a href="" class="call_to-btn btn_white-border">
+                  Read More
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section> -->
+
+
+<!-- end why section -->
