--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <div class="row">
               <div class="col-md-3">
                 <div class="client_img-box">
-                  <img src="images/client.png" alt="">
+                  <img src="images/amal.jpeg" alt="">
                 </div>
               </div>
               <div class="col-md-9">
@@ -213,7 +213,7 @@
             <div class="row">
               <div class="col-md-3">
                 <div class="client_img-box">
-                  <img src="images/client.png" alt="">
+                  <img src="images/arun.jpeg" alt="">
                 </div>
               </div>
               <div class="col-md-9">
@@ -236,7 +236,7 @@
             <div class="row">
               <div class="col-md-3">
                 <div class="client_img-box">
-                  <img src="images/client.png" alt="">
+                  <img src="images/standared.png" alt="">
                 </div>
               </div>
               <div class="col-md-9">
