index page modification

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                   <a class="nav-link" href="why.html"> Why Us </a>
                 </li>
 
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                   <a class="nav-link" href="contact.html">Contact Us</a>
-                </li>
+                </li> -->
 
               </ul>
             </div>
@@ -87,7 +87,7 @@
             We make learning simple, efficient, and powerful
           </p>
           <div class="hero_btn-continer">
-            <a href="" class="call_to-btn btn_white-border">
+            <a href="explore.html" class="call_to-btn btn_white-border">
               Explore
             </a>
           </div>
@@ -116,15 +116,14 @@
           <div class="col-md-6">
             <div class="about_detail-box">
               <h3>
-                About our School
+                Why Coursetube
               </h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                Course tube just made learning more simple by storing the educational contents from YouTube in a
+                different platform especially made for knowledge grasping
               </p>
               <div class="">
-                <a href="" class="call_to-btn btn_white-border">
+                <a href="why.html" class="call_to-btn btn_white-border">
                   Explore
                 </a>
               </div>
@@ -144,12 +143,11 @@
           <div class="col-md-6">
             <div class="determine_detail-box">
               <h3>
-                Datermine the right for you
+                About Us
               </h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                Course tube is a open source education platform that allows the user to surf through YouTube educational
+                videos without any distraction. Coursetube is actually YouTube that focus on educational contents.
               </p>
               <div class="">
                 <a href="" class="call_to-btn btn_white-border">
@@ -196,7 +194,7 @@
               <div class="col-md-9">
                 <div class="client_detail-box">
                   <h5>
-                    Alex Du
+                    Amal M
                   </h5>
                   <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
@@ -219,7 +217,7 @@
               <div class="col-md-9">
                 <div class="client_detail-box">
                   <h5>
-                    Alex Du
+                    Arun K
                   </h5>
                   <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
@@ -242,14 +240,12 @@
               <div class="col-md-9">
                 <div class="client_detail-box">
                   <h5>
-                    Alex Du
+                    Ashique Hira
                   </h5>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex
-                    ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                    There are thousands of free courses on youtube with high-quality, expert instructors and
+                    well-delivered tutorials. but when it comes to enrolling start learn a course. I had a terrible
+                    experince of distraction happening by other contents of the youtube. There I found our Coursetube
                   </p>
                 </div>
               </div>
@@ -275,15 +271,15 @@
     </div>
     <div class="container layout_padding2">
       <div class="row">
-        <div class="col-md-3">
+        <!-- <div class="col-md-3">
           <h5>
             About Us
           </h5>
           <p>
             dolor sit amet, consectetur magna aliqua. Ut enim ad minim veniam, quisdotempor incididunt r
           </p>
-        </div>
-        <div class="col-md-3">
+        </div> -->
+        <!-- <div class="col-md-3">
           <h5>
             Useful Link
           </h5>
@@ -304,13 +300,13 @@
               </a>
             </li>
           </ul>
-        </div>
+        </div> -->
         <div class="col-md-3">
           <h5>
             Contact Us
           </h5>
           <p>
-            dolor sit amet, consectetur magna aliqua. quisdotempor incididunt ut e
+            Information Technology Department, KMCT College of Engineering Kozhikode, Kerala.
           </p>
         </div>
         <div class="col-md-3">
