--- a/why.html
+++ b/why.html
@@ -100,9 +100,8 @@
                 Why learn on Coursetube
               </h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                Course tube just made learning more simple by storing the educational contents from YouTube in a
+                different platform especially made for knowledge grasping
               </p>
               <div class="">
                 <a href="" class="call_to-btn btn_white-border">
