--- a/about.html
+++ b/about.html
@@ -97,12 +97,11 @@
           <div class="col-md-6">
             <div class="about_detail-box">
               <h3>
-                About our School
+                About Us
               </h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                Course tube is a open source education platform that allows the user to surf through YouTube educational
+                videos without any distraction. Coursetube is actually YouTube that focus on educational contents
               </p>
               <div class="">
                 <a href="" class="call_to-btn btn_white-border">
