--- a/index.html
+++ b/index.html
@@ -311,19 +311,19 @@
         </div>
         <div class="col-md-3">
 
-          <div class="subscribe_container">
-            <h5>
-              Newsletter
-            </h5>
-            <div class="form_container">
-              <form action="">
-                <input type="email" placeholder="Enter your email">
-                <button type="submit">
-                  Subscribe
-                </button>
-              </form>
-            </div>
-          </div>
+          <!-- <div class="subscribe_container">
+              <h5>
+                Newsletter
+              </h5>
+              <div class="form_container">
+                <form action="">
+                  <input type="email" placeholder="Enter your email">
+                  <button type="submit">
+                    Subscribe
+                  </button>
+                </form>
+              </div>
+            </div> -->
 
         </div>
       </div>
